--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,77 @@
 body {
-  background-color: #000;
+  background-color: #003;
   color: #FFF;
 }
 
+a {
+  color: #99F;
+}
+
+.wrapper {
+  background-color: #025;
+  border-radius: 5px;
+  box-shadow: 1px 1px 5px #FFF;
+  margin: auto;
+  max-width: 1024px;
+  min-width: 250px;
+}
+
+header h1 {
+  color: #FFF;
+  font-size: 3em;
+  text-align: center;
+  text-shadow: 0px 0px 5px #000;
+}
+
+nav {
+  float: left;
+  width: 80px;
+}
+
+nav ul {
+  list-style: none;
+  margin: 5px;
+  padding: 3px;
+  width: 100%;
+}
+
+nav a {
+  background-color: #333;
+  border: 1px solid #678;
+  border-radius: 5px;
+  color: #fff;;
+  display: block;
+  padding: 3px;
+  margin: 3px;
+  text-align: center;
+  text-decoration: none;
+  width: 100%;
+}
+
+.main {
+  padding-left: 120px;
+}
+
+table td, table th {
+  border: 1px solid #777;
+  padding: 5px;
+  text-align: left;
+  width: auto;
+}
+
+table th {
+  background-color: #AAA;
+  color: #000;
+}
+
+fieldset {
+  margin: 30px 0px;
+}
+
+footer {
+  border-top: 2px solid #777;
+  margin: 10px;
+  padding: 4px 0px 2px 0px;
+  text-align: center;
+  text-shadow: 1px 1px 3px #000;
+}
